--- a/python-app/Jenkinsfile
+++ b/python-app/Jenkinsfile
@@ -2,7 +2,7 @@ pipeline {
 
   environment {
 
-    registry = "sankethshinde/demoproject"
+    registry = "neetimunshi/project1"
 
     registryCredential = 'docker-creds'
 
@@ -18,7 +18,7 @@ pipeline {
 
       steps {
 
-        git 'https://github.com/shindesanket/Docker-Jenkins-Demo'
+        git 'https://github.com/neetimunshi11/project1.git'
 
       }
 
